// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Haciendo pruebas con el componente <GifExpertApp /> Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One punch"
      key="One punch"
    />
    <GifGrid
      category="dragon Ball"
      key="dragon Ball"
    />
  </ol>
</Fragment>
`;

exports[`Haciendo pruebas con el componente <GifExpertApp /> El snapshot debe de coincidir 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
